[gd_scene load_steps=4 format=3 uid="uid://cov01x8gmv584"]

[ext_resource type="Script" path="res://scene/scripts/main_menu.gd" id="1_5h0ca"]
[ext_resource type="Texture2D" uid="uid://bjo5l15oq340m" path="res://World/DPsuoTiVoAAFVHN.jpg" id="2_hm0f3"]

[sub_resource type="Theme" id="Theme_2v5xh"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5h0ca")

[node name="DPsuoTiVoAafvhn" type="Sprite2D" parent="."]
position = Vector2(567, 317)
texture = ExtResource("2_hm0f3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 37.0
offset_top = 494.0
offset_right = 177.0
offset_bottom = 598.0
size_flags_horizontal = 0
size_flags_vertical = 8
theme = SubResource("Theme_2v5xh")

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Mulai Permainan"

[node name="About" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Tentang Game"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Keluar
"

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 395.0
offset_top = 24.0
offset_right = 1114.0
offset_bottom = 175.0
theme_override_colors/background_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "Bandung 1946"
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/About" to="." method="_on_about_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
